--- a/AndroidClientProj/res/layout/activity_main.xml
+++ b/AndroidClientProj/res/layout/activity_main.xml
@@ -52,5 +52,15 @@
         android:layout_marginTop="18dp"
         android:text="@string/user_password_caption"
         android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/textView3"
+        android:layout_alignRight="@+id/editText2"
+        android:layout_below="@+id/editText2"
+        android:layout_marginTop="40dp"
+        android:text="Login" />
 
 </RelativeLayout>
