--- a/AndroidClientProj/res/layout/activity_main.xml
+++ b/AndroidClientProj/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         tools:context=".MainActivity" />
 
     <EditText
-        android:id="@+id/editText1"
+        android:id="@+id/editText_username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/textView1"
@@ -25,7 +25,7 @@
     </EditText>
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/editText_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView1"
@@ -52,15 +52,23 @@
         android:layout_marginTop="18dp"
         android:text="@string/user_password_caption"
         android:textAppearance="?android:attr/textAppearanceLarge" />
-
+
     <Button
-        android:id="@+id/button1"
+        android:id="@+id/button_New_User"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView3"
-        android:layout_alignRight="@+id/editText2"
-        android:layout_below="@+id/editText2"
-        android:layout_marginTop="40dp"
+        android:layout_alignLeft="@+id/button_do_login"
+        android:layout_alignParentBottom="true"
+        android:layout_alignRight="@+id/button_do_login"
+        android:text="New User" />
+
+    <Button
+        android:id="@+id/button_do_login"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/button_New_User"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="22dp"
         android:hint="Send Your Login To Server"
         android:text="Login" />
 
