--- a/AndroidClientProj/res/layout/activity_main.xml
+++ b/AndroidClientProj/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:layout_centerVertical="true"
         android:text="@string/hello_world"
         tools:context=".MainActivity" />
-
+
     <EditText
         android:id="@+id/editText_username"
         android:layout_width="wrap_content"
@@ -19,11 +19,12 @@
         android:layout_above="@+id/textView1"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="68dp"
-        android:ems="10" >
+        android:ems="10"
+        android:text="user@example.com" >
 
         <requestFocus />
     </EditText>
-
+
     <EditText
         android:id="@+id/editText_password"
         android:layout_width="wrap_content"
@@ -32,7 +33,8 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="45dp"
         android:ems="10"
-        android:inputType="textPassword" />
+        android:inputType="textPassword"
+        android:text="please" />
 
     <TextView
         android:id="@+id/textView2"
