--- a/AndroidClientProj/res/layout/activity_home.xml
+++ b/AndroidClientProj/res/layout/activity_home.xml
@@ -13,4 +13,13 @@
         android:layout_marginLeft="20dp"
         android:text="Log Out" />
 
+    <Button
+        android:id="@+id/button_home_CreateNewEvent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="17dp"
+        android:text="Create Event" />
+
 </RelativeLayout>
