--- a/AndroidClientProj/res/layout/activity_home.xml
+++ b/AndroidClientProj/res/layout/activity_home.xml
@@ -1,33 +1,31 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:orientation="vertical" >
 
     <Button
         android:id="@+id/button_Home_Logout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_marginBottom="20dp"
-        android:layout_marginLeft="20dp"
         android:text="Log Out" />
 
     <Button
         android:id="@+id/button_home_CreateNewEvent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="17dp"
         android:text="Create Event" />
 
     <Button
         android:id="@+id/button_Home_CreateGroup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/button_home_CreateNewEvent"
         android:text="Create Group" />
-
-</RelativeLayout>
+    
+	<Button
+        android:id="@+id/button_Home_GetUsersForGroup"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Get Users For Group" />
+	
+</LinearLayout>
