--- a/AndroidClientProj/res/layout/activity_add_users_to_event.xml
+++ b/AndroidClientProj/res/layout/activity_add_users_to_event.xml
@@ -39,11 +39,19 @@
         android:text="Unable to find your friend"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
+        <Button
+        android:id="@+id/buttonAddUsersToEvent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Add people to event" />
+    
     <ListView
         android:id="@+id/listViewUsers"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="60dp" >
     </ListView>
+
+
 
 </LinearLayout>
