--- a/AndroidClientProj/res/layout/eventlistview.xml
+++ b/AndroidClientProj/res/layout/eventlistview.xml
@@ -2,14 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+layout/linearLayout_eventListTemplate"
     
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:orientation="vertical" >
 
     <TextView
         android:id="@+id/textView_EventList_Name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:text="Large Text"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
